--- a/Interaktion/Lab4/src/App.css
+++ b/Interaktion/Lab4/src/App.css
@@ -3,6 +3,8 @@
     margin: 0;
 }
 .App-header{
+    height: 100vh;
+    width: 100vw;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);
@@ -16,6 +18,9 @@
     font-size: 5em;
     padding: 0.1em;
     border-bottom: black solid 3px;
+    min-width: 0;
+    min-height: 0;
+    overflow: hidden;
 }
 .button{
     background: rgb(228, 158, 30);
