--- a/Interaktion/Lab4/src/Details/Details.css
+++ b/Interaktion/Lab4/src/Details/Details.css
@@ -20,7 +20,7 @@
     grid-row: 2;
     min-width: 0;
     min-height: 0;
-    height: 42%;
+    height: 200px;
 }
 .preparation{
     grid-column: 2;
